--- a/Camera/app/src/main/res/values/strings.xml
+++ b/Camera/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Camera</string>
+    <string name="btGallery">AGREGAR A GALERIA</string>
+    <string name="btCamera">TOMAR FOTO</string>
 </resources>
